Fix Codespaces run issues and add backend launcher workaround